@@ -6,25 +6,17 @@ import subprocess
 import sys
 import traceback
 
-try:
-    from HTMLParser import HTMLParser
-except ImportError:
-    from html.parser import HTMLParser
-try:
-    from urllib import quote as _quote
-
-    quote = lambda n: _quote(n.encode('utf8', 'replace'))
-except ImportError:
-    from urllib.parse import quote
+from html import unescape
 
 import requests
+from typing import Dict, Union
 
 from . import config
 
 logger = logging.getLogger('itchat')
 
 emojiRegex = re.compile(r'<span class="emoji emoji(.{1,10})"></span>')
-htmlParser = HTMLParser()
+
 try:
     b = u'\u2588'
     sys.stdout.write(b + '\r')
@@ -33,7 +25,7 @@ except UnicodeEncodeError:
     BLOCK = 'MM'
 else:
     BLOCK = b
-friendInfoTemplate = {}
+friendInfoTemplate: Dict[str, Union[int, str, list]] = {}
 for k in ('UserName', 'City', 'DisplayName', 'PYQuanPin', 'RemarkPYInitial', 'Province',
           'KeyWord', 'RemarkName', 'PYInitial', 'EncryChatRoomId', 'Alias', 'Signature',
           'NickName', 'RemarkPYQuanPin', 'HeadImgUrl'):
@@ -49,36 +41,39 @@ def clear_screen():
     os.system('cls' if config.OS == 'Windows' else 'clear')
 
 
+def __fix_miss_match(m):
+    return '<span class="emoji emoji{}"></span>' \
+        .format({
+                    '1f63c': '1f601', '1f639': '1f602', '1f63a': '1f603',
+                    '1f4ab': '1f616', '1f64d': '1f614', '1f63b': '1f60d',
+                    '1f63d': '1f618', '1f64e': '1f621', '1f63f': '1f622',
+                }.get(m.group(1), m.group(1)))
+
+
+def _emoji_debugger(d, k):
+    s = d[k].replace('<span class="emoji emoji1f450"></span',
+                     '<span class="emoji emoji1f450"></span>')  # fix missing bug
+
+    return emojiRegex.sub(__fix_miss_match, s)
+
+
+def _emoji_formatter(m):
+    s = m.group(1)
+    if len(s) == 6:
+        return ('\\U%s\\U%s' % (s[:2].rjust(8, '0'), s[2:].rjust(8, '0'))
+                ).encode('utf8').decode('unicode-escape', 'replace')
+    elif len(s) == 10:
+        return ('\\U%s\\U%s' % (s[:5].rjust(8, '0'), s[5:].rjust(8, '0'))
+                ).encode('utf8').decode('unicode-escape', 'replace')
+    else:
+        return ('\\U%s' % m.group(1).rjust(8, '0')
+                ).encode('utf8').decode('unicode-escape', 'replace')
+
+
 def emoji_formatter(d, k):
-    """ _emoji_deebugger is for bugs about emoji match caused by wechat backstage
+    """ _emoji_debugger is for bugs about emoji match caused by wechat backstage
     like :face with tears of joy: will be replaced with :cat face with tears of joy:
     """
-
-    def _emoji_debugger(d, k):
-        s = d[k].replace('<span class="emoji emoji1f450"></span',
-                         '<span class="emoji emoji1f450"></span>')  # fix missing bug
-
-        def __fix_miss_match(m):
-            return '<span class="emoji emoji{}"></span>' \
-                .format({
-                            '1f63c': '1f601', '1f639': '1f602', '1f63a': '1f603',
-                            '1f4ab': '1f616', '1f64d': '1f614', '1f63b': '1f60d',
-                            '1f63d': '1f618', '1f64e': '1f621', '1f63f': '1f622',
-                        }.get(m.group(1), m.group(1)))
-
-        return emojiRegex.sub(__fix_miss_match, s)
-
-    def _emoji_formatter(m):
-        s = m.group(1)
-        if len(s) == 6:
-            return ('\\U%s\\U%s' % (s[:2].rjust(8, '0'), s[2:].rjust(8, '0'))
-                    ).encode('utf8').decode('unicode-escape', 'replace')
-        elif len(s) == 10:
-            return ('\\U%s\\U%s' % (s[:5].rjust(8, '0'), s[5:].rjust(8, '0'))
-                    ).encode('utf8').decode('unicode-escape', 'replace')
-        else:
-            return ('\\U%s' % m.group(1).rjust(8, '0')
-                    ).encode('utf8').decode('unicode-escape', 'replace')
 
     d[k] = _emoji_debugger(d, k)
     d[k] = emojiRegex.sub(_emoji_formatter, d[k])
@@ -87,7 +82,7 @@ def emoji_formatter(d, k):
 def msg_formatter(d, k):
     emoji_formatter(d, k)
     d[k] = d[k].replace('<br/>', '\n')
-    d[k] = htmlParser.unescape(d[k])
+    d[k] = unescape(d[k])
 
 
 def check_file(fileDir):
