@@ -1,6 +1,6 @@
 **The MIT License**
 
-Copyright (c) 2019 Eana Hufwe <ilove@1a23.com>
+Copyright (c) 2019 - 2020 Eana Hufwe <ilove@1a23.com>
 
 Copyright (c) 2017 [Youfou](https://github.com/youfou)
 
