@@ -7,6 +7,7 @@ from pkg_resources import resource_filename
 from ruamel.yaml import YAML
 
 from ehforwarderbot import coordinator, utils
+from ehforwarderbot.types import ModuleID
 from . import WeChatChannel
 
 
@@ -33,7 +34,7 @@ class DataModel:
         self.instance_id = instance_id
         self.channel_id = WeChatChannel.channel_id
         if instance_id:
-            self.channel_id += "#" + instance_id
+            self.channel_id = ModuleID(self.channel_id + "#" + instance_id)
         self.config_path = utils.get_config_path(self.channel_id)
         self.yaml = YAML()
         if not self.config_path.exists():
