@@ -5,3 +5,5 @@
 - Remove registration of cleanup method with atexit.
 - Use filename in XML if possible to avoid improper escape of file name in JSON data
 - Add attribute Message.app_name
+- Add type hints (partially)
+- Remove Python 2 compatibility code
